--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,125 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- displays site properly based on user's device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
+
     <title>Insure</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <!-- Header and Nav -->
+    <header class="header">
+      <nav class="header__nav">
+        <a class="header__nav-logo" href="/"><img class="nav__logo" src="./assets/images/logo.svg" alt="Logo" /></a>
+        <ul>
+          <li><a class="header__nav-link" href="#">how we work</a></li>
+          <li><a class="header__nav-link" href="#">blog</a></li>
+          <li><a class="header__nav-link" href="#">account</a></li>
+          <li><button class="header__nav-button button">view plans</button></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- End of Header and Nav -->
+
+    <!-- Main Content-->
+    <main class="main">
+      <!-- Hero -->
+      <section class="hero">
+        <div class="hero__inner">
+          <h1 class="hero__headline">Humanizing your insurance.</h1>
+          <p class="hero__description">Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
+          <button class="hero__button button">view plans</button>
+        </div>
+        <div class="hero__image">
+          <img src="./assets/images/image-intro-desktop.jpg" alt="Image - Family Walking" />
+        </div>
+      </section>
+      <!-- End of Hero -->
+
+      <!-- Feature -->
+      <section class="feature">
+        <h1 class="feature__headline">We're different</h1>
+        <div class="feature__items">
+          <div class="feature__items-item">
+            <img src="./assets/images/icon-snappy-process.svg" alt="Snappy Process" />
+            <h3>Snappy Process</h3>
+            <p>Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
+          </div>
+          <div class="feature__items-item">
+            <img src="./assets/images/icon-affordable-prices.svg" alt="Affordable Prices" />
+            <h3>Affordable Prices</h3>
+            <p>We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
+          </div>
+          <div class="feature__items-item">
+            <img src="./assets/images/icon-people-first.svg" alt="People First" />
+            <h3>People First</h3>
+            <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
+          </div>
+        </div>
+      </section>
+      <!-- End of Feature -->
+
+      <!-- Find Out More -->
+      <section class="find-out-more">
+        <h1 class="find-out-more__headline">Find out more about how we work</h1>
+        <button class="find-out-more__button button">how we work</button>
+      </section>
+      <!-- End of Find Out More -->
+    </main>
+    <!-- End of Main Content-->
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer__inner">
+        <div class="footer__header">
+          <img src="./assets/images/logo.svg" alt="Logo" />
+          <div class="footer__social-icons">
+            <a href="#"><img src="./assets/images/icon-facebook.svg" alt="Facebook Icon" /></a>
+            <a href="#"><img src="./assets/images/icon-twitter.svg" alt="Twitter Icon" /></a>
+            <a href="#"><img src="./assets/images/icon-pinterest.svg" alt="Pinterest Icon" /></a>
+            <a href="#"><img src="./assets/images/icon-instagram.svg" alt="Instagram Icon" /></a>
+          </div>
+          <div class="footer__main">
+            <div class="footer__main-col1">
+              <h3>our company</h3>
+              <ul>
+                <li><a href="#">how we work</a></li>
+                <li><a href="#">why insure?</a></li>
+                <li><a href="#">view plans</a></li>
+                <li><a href="#">reviews</a></li>
+              </ul>
+            </div>
+            <div class="footer__main-col2">
+              <h3>help me</h3>
+              <ul>
+                <li><a href="#">faq</a></li>
+                <li><a href="#">terms of use</a></li>
+                <li><a href="#">privacy policy</a></li>
+                <li><a href="#">cookies</a></li>
+              </ul>
+            </div>
+            <div class="footer__main-col3">
+              <h3>contact</h3>
+              <ul>
+                <li><a href="#">sales</a></li>
+                <li><a href="#">support</a></li>
+                <li><a href="#">live chat</a></li>
+              </ul>
+            </div>
+            <div class="footer__main-col4">
+              <h3>others</h3>
+              <ul>
+                <li><a href="#">career</a></li>
+                <li><a href="#">press</a></li>
+                <li><a href="#">licenses</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- End of Footer -->
   </body>
 </html>
