--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <header class="header">
       <nav class="header__nav">
         <a class="header__nav-logo" href="/"><img class="nav__logo" src="./assets/images/logo.svg" alt="Logo" /></a>
+        <img src="./assets/images/icon-hamburger.svg" alt="Menu Icon" />
         <ul>
           <li><a class="header__nav-link" href="#">how we work</a></li>
           <li><a class="header__nav-link" href="#">blog</a></li>
