added close mobile nav menu icon

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       <nav class="header__nav">
         <a class="header__nav-logo" href="/"><img class="nav__logo" src="./assets/images/logo.svg" alt="Logo" /></a>
         <img src="./assets/images/icon-hamburger.svg" alt="Menu Icon" />
+        <img src="./assets/images/icon-close.svg" alt="Close Menu Icon" />
         <ul>
           <li><a class="header__nav-link" href="#">how we work</a></li>
           <li><a class="header__nav-link" href="#">blog</a></li>
