adjusting header markup

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,13 @@
   <body>
     <!-- Header and Nav -->
     <header class="header">
+      <a class="header__logo" href="/">
+        <img src="./assets/images/logo.svg" alt="Logo" />
+      </a>
+      <img class="header__hamburger-icon" src="./assets/images/icon-hamburger.svg" alt="Menu Icon" />
+      <img class="header__close-menu" src="./assets/images/icon-close.svg" alt="Close Menu Icon" />
       <nav class="header__nav">
-        <a class="header__nav-logo" href="/"><img class="nav__logo" src="./assets/images/logo.svg" alt="Logo" /></a>
-        <img src="./assets/images/icon-hamburger.svg" alt="Menu Icon" />
-        <img src="./assets/images/icon-close.svg" alt="Close Menu Icon" />
-        <ul>
+        <ul class="header__nav-menu">
           <li><a class="header__nav-link" href="#">how we work</a></li>
           <li><a class="header__nav-link" href="#">blog</a></li>
           <li><a class="header__nav-link" href="#">account</a></li>
