minor adjustments to hero markup

--- a/src/index.html
+++ b/src/index.html
@@ -34,13 +34,11 @@
     <main class="main">
       <!-- Hero -->
       <section class="hero">
-        <div class="hero__inner">
+        <img class="hero__image" src="./assets/images/image-intro-desktop.jpg" alt="Image - Family Walking" />
+        <div class="hero__intro">
           <h1 class="hero__headline">Humanizing your insurance.</h1>
           <p class="hero__description">Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
           <button class="hero__button button">view plans</button>
-        </div>
-        <div class="hero__image">
-          <img src="./assets/images/image-intro-desktop.jpg" alt="Image - Family Walking" />
         </div>
       </section>
       <!-- End of Hero -->
