--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,11 @@
       <section class="hero">
         <img class="hero__image" src="./assets/images/image-intro-desktop.jpg" alt="Image - Family Walking" />
         <div class="hero__intro">
-          <h1 class="hero__headline">Humanizing your insurance.</h1>
-          <p class="hero__description">Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
-          <button class="hero__button button">view plans</button>
+          <img class="hero__intro-left-bg-pattern-image" src="./assets/images/bg-pattern-intro-left-mobile.svg" alt="" />
+          <h1 class="hero__intro-headline">Humanizing your insurance.</h1>
+          <p class="hero__intro-description">Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
+          <button class="hero__intro-button button">view plans</button>
+          <img class="hero__intro-right-bg-pattern-image" src="./assets/images/bg-pattern-intro-right-mobile.svg" alt="" />
         </div>
       </section>
       <!-- End of Hero -->
