removed assets from all img file paths

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
     <!-- Header and Nav -->
     <header class="header">
       <a class="header__logo" href="/">
-        <img src="./assets/images/logo.svg" alt="Logo" />
+        <img src="./images/logo.svg" alt="Logo" />
       </a>
-      <img class="header__hamburger-icon" src="./assets/images/icon-hamburger.svg" alt="Menu Icon" />
-      <img class="header__close-menu" src="./assets/images/icon-close.svg" alt="Close Menu Icon" />
+      <img class="header__hamburger-icon" src="./images/icon-hamburger.svg" alt="Menu Icon" />
+      <img class="header__close-menu" src="./images/icon-close.svg" alt="Close Menu Icon" />
       <nav class="header__nav">
         <ul class="header__nav-menu">
           <li><a class="header__nav-link" href="#">how we work</a></li>
@@ -34,13 +34,13 @@
     <main class="main">
       <!-- Hero -->
       <section class="hero">
-        <img class="hero__image" src="./assets/images/image-intro-desktop.jpg" alt="Image - Family Walking" />
+        <img class="hero__image" src="./images/image-intro-desktop.jpg" alt="Image - Family Walking" />
         <div class="hero__intro">
-          <img class="hero__intro-left-bg-pattern-image" src="./assets/images/bg-pattern-intro-left-mobile.svg" alt="" />
+          <img class="hero__intro-left-bg-pattern-image" src="./images/bg-pattern-intro-left-mobile.svg" alt="" />
           <h1 class="hero__intro-headline">Humanizing your insurance.</h1>
           <p class="hero__intro-description">Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
           <button class="hero__intro-button button">view plans</button>
-          <img class="hero__intro-right-bg-pattern-image" src="./assets/images/bg-pattern-intro-right-mobile.svg" alt="" />
+          <img class="hero__intro-right-bg-pattern-image" src="./images/bg-pattern-intro-right-mobile.svg" alt="" />
         </div>
       </section>
       <!-- End of Hero -->
@@ -50,17 +50,17 @@
         <h1 class="feature__headline">We're different</h1>
         <div class="feature__items">
           <div class="feature__items-item">
-            <img src="./assets/images/icon-snappy-process.svg" alt="Snappy Process" />
+            <img src="./images/icon-snappy-process.svg" alt="Snappy Process" />
             <h3>Snappy Process</h3>
             <p>Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
           </div>
           <div class="feature__items-item">
-            <img src="./assets/images/icon-affordable-prices.svg" alt="Affordable Prices" />
+            <img src="./images/icon-affordable-prices.svg" alt="Affordable Prices" />
             <h3>Affordable Prices</h3>
             <p>We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
           </div>
           <div class="feature__items-item">
-            <img src="./assets/images/icon-people-first.svg" alt="People First" />
+            <img src="./images/icon-people-first.svg" alt="People First" />
             <h3>People First</h3>
             <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
           </div>
@@ -81,12 +81,12 @@
     <footer class="footer">
       <div class="footer__inner">
         <div class="footer__header">
-          <img src="./assets/images/logo.svg" alt="Logo" />
+          <img src="./images/logo.svg" alt="Logo" />
           <div class="footer__social-icons">
-            <a href="#"><img src="./assets/images/icon-facebook.svg" alt="Facebook Icon" /></a>
-            <a href="#"><img src="./assets/images/icon-twitter.svg" alt="Twitter Icon" /></a>
-            <a href="#"><img src="./assets/images/icon-pinterest.svg" alt="Pinterest Icon" /></a>
-            <a href="#"><img src="./assets/images/icon-instagram.svg" alt="Instagram Icon" /></a>
+            <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook Icon" /></a>
+            <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter Icon" /></a>
+            <a href="#"><img src="./images/icon-pinterest.svg" alt="Pinterest Icon" /></a>
+            <a href="#"><img src="./images/icon-instagram.svg" alt="Instagram Icon" /></a>
           </div>
           <div class="footer__main">
             <div class="footer__main-col1">
