footer markup adjustments

--- a/src/index.html
+++ b/src/index.html
@@ -80,51 +80,56 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__inner">
+        <!-- Footer Header -->
         <div class="footer__header">
-          <img src="./images/logo.svg" alt="Logo" />
+          <img class="footer__header-logo" src="./images/logo.svg" alt="Logo" />
           <div class="footer__social-icons">
             <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook Icon" /></a>
             <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter Icon" /></a>
             <a href="#"><img src="./images/icon-pinterest.svg" alt="Pinterest Icon" /></a>
             <a href="#"><img src="./images/icon-instagram.svg" alt="Instagram Icon" /></a>
           </div>
-          <div class="footer__main">
-            <div class="footer__main-col1">
-              <h3>our company</h3>
-              <ul>
-                <li><a href="#">how we work</a></li>
-                <li><a href="#">why insure?</a></li>
-                <li><a href="#">view plans</a></li>
-                <li><a href="#">reviews</a></li>
-              </ul>
-            </div>
-            <div class="footer__main-col2">
-              <h3>help me</h3>
-              <ul>
-                <li><a href="#">faq</a></li>
-                <li><a href="#">terms of use</a></li>
-                <li><a href="#">privacy policy</a></li>
-                <li><a href="#">cookies</a></li>
-              </ul>
-            </div>
-            <div class="footer__main-col3">
-              <h3>contact</h3>
-              <ul>
-                <li><a href="#">sales</a></li>
-                <li><a href="#">support</a></li>
-                <li><a href="#">live chat</a></li>
-              </ul>
-            </div>
-            <div class="footer__main-col4">
-              <h3>others</h3>
-              <ul>
-                <li><a href="#">career</a></li>
-                <li><a href="#">press</a></li>
-                <li><a href="#">licenses</a></li>
-              </ul>
-            </div>
+        </div>
+        <!-- End of Footer Header -->
+
+        <!-- Footer Main -->
+        <div class="footer__main">
+          <div class="footer__main-col">
+            <h3>our company</h3>
+            <ul>
+              <li><a href="#">how we work</a></li>
+              <li><a href="#">why insure?</a></li>
+              <li><a href="#">view plans</a></li>
+              <li><a href="#">reviews</a></li>
+            </ul>
+          </div>
+          <div class="footer__main-col">
+            <h3>help me</h3>
+            <ul>
+              <li><a href="#">faq</a></li>
+              <li><a href="#">terms of use</a></li>
+              <li><a href="#">privacy policy</a></li>
+              <li><a href="#">cookies</a></li>
+            </ul>
+          </div>
+          <div class="footer__main-col">
+            <h3>contact</h3>
+            <ul>
+              <li><a href="#">sales</a></li>
+              <li><a href="#">support</a></li>
+              <li><a href="#">live chat</a></li>
+            </ul>
+          </div>
+          <div class="footer__main-col">
+            <h3>others</h3>
+            <ul>
+              <li><a href="#">career</a></li>
+              <li><a href="#">press</a></li>
+              <li><a href="#">licenses</a></li>
+            </ul>
           </div>
         </div>
+        <!-- End of Footer Main -->
       </div>
     </footer>
     <!-- End of Footer -->
