--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
         <a class="header__logo" href="/">
           <img src="./images/logo.svg" alt="Logo" />
         </a>
-        <img class="header__hamburger-icon" src="./images/icon-hamburger.svg" alt="Menu Icon" />
-        <img class="header__close-menu" src="./images/icon-close.svg" alt="Close Menu Icon" />
-        <nav class="header__nav">
+        <img id="hamburger-icon" class="header__hamburger-icon" src="./images/icon-hamburger.svg" alt="Menu Icon" />
+        <img id="close-menu-icon" class="header__close-menu" src="./images/icon-close.svg" alt="Close Menu Icon" />
+        <nav id="header-nav" class="header__nav">
           <ul class="header__nav-menu">
             <li><a class="header__nav-link" href="#">how we work</a></li>
             <li><a class="header__nav-link" href="#">blog</a></li>
